<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".View.home.HomeActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/colorBackground">
        <RelativeLayout
            android:id="@+id/header_view"
            android:layout_width="match_parent"
            android:layout_height="300dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/colorPrimary"/>
            <TextView
                android:id="@+id/home_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCardPrimary"
                android:textSize="20dp"
                android:text="@string/home_header"
                android:textStyle="bold"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:padding="4sp" />
            <TextView
                android:id="@+id/home_subheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCardPrimary"
                android:textSize="25dp"
                android:text="@string/home_subheader"
                android:textStyle="bold"
                android:layout_marginHorizontal="15dp"
                android:padding="4sp"
                android:layout_below="@id/home_header"/>
            <androidx.cardview.widget.CardView
            android:id="@+id/card_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_subheader"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="@color/colorCardPrimary"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">
                <SearchView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/editTextSearch"
                    android:padding="10dp"
                    android:queryHint="@string/search"
                    android:textColorHint="@color/colorCardBottomText"
                    android:iconifiedByDefault="false"
                    android:drawablePadding="10dp"
                    android:layout_marginLeft="-20dp"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/title_category"
                android:text="@string/meal_category"
                android:textSize="19sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_search"/>
            <TextView
                android:id="@+id/noResultsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="There is no such category"
                android:visibility="gone"
                android:layout_marginTop="30dp"
                android:layout_below="@id/title_category"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_category"
                android:scrollbars="none"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:layout_below="@id/title_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="50dp"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/title_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>