<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground"
    tools:context=".View.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppBarLayoutTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <ImageView
                android:id="@+id/mealThumb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="60dp"/>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:layout_marginTop="14dp"
                        android:text="@string/instructions"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/instructions"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:textSize="16sp"
                            android:textColor="@color/colorCardBottomText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:layout_marginTop="14dp"
                        android:text="@string/Ingredients"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">
                            <TextView
                                android:id="@+id/ingredient"
                                android:paddingLeft="14dp"
                                android:paddingRight="14dp"
                                android:textSize="16sp"
                                android:textColor="@color/colorCardBottomText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">
                            <TextView
                                android:id="@+id/measure"
                                android:paddingLeft="14dp"
                                android:paddingRight="14dp"
                                android:textSize="16sp"
                                android:textColor="@color/colorCardBottomText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp">
                <androidx.cardview.widget.CardView
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#FFE1E1"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">
                    <TextView
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:id="@+id/youtube"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/youtube"
                        android:padding="14dp"
                        android:textSize="16sp"
                        android:textColor="#EC2D2D"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_play"
                        android:drawableStart="@drawable/ic_play" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#D0FFDB"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp">
                    <TextView
                        android:id="@+id/source"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/source"
                        android:padding="14dp"
                        android:textSize="16sp"
                        android:textColor="#2A7E2F"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_link"
                        android:drawableStart="@drawable/ic_link" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>